--- a/1-3. basic mnist.ipynb
+++ b/1-3. basic mnist.ipynb
@@ -215,7 +215,8 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -271,6 +272,38 @@
     "print (\"type of 'batch_ys2' is %s\" % (type(batch_ys2)))\n",
     "print (\"shape of 'batch_xs2' is %s\" % (batch_xs2.shape,))\n",
     "print (\"shape of 'batch_ys2' is %s\" % (batch_ys2.shape,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([14424, 18266, 51424, 45126, 41166, 15003, 54676, 30006, 45970,\n",
+       "       52095,  3522, 44936, 21949, 44842, 41837, 40668,  9667, 41646,\n",
+       "        3600, 15251, 26337, 27460, 52678,  6449, 48053, 20193, 40260,\n",
+       "       29480, 20567, 45904, 30837, 45905, 45180,  7602,  2576, 23432,\n",
+       "       44468, 37605, 25818, 37354,  7794, 13354, 10975, 50969, 16164,\n",
+       "       16209, 47054, 53515, 52012, 28380,  4587, 14285,  6080, 50722,\n",
+       "       36188, 17257,  1648, 27785,  4299, 36106, 54172,  4019, 49182,\n",
+       "       51365, 48105,  5694, 18919,  4503,  7214, 43934, 41313, 24234,\n",
+       "       35871,  5711, 38938, 24403, 20709, 49222,  4379, 48905, 33369,\n",
+       "       27893, 11668, 14801,  7086, 42162, 12329, 22984, 42546, 37712,\n",
+       "       54478, 49055, 10352, 26655, 49978, 53378, 53715, 43047, 20590,  8454])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "randidx"
    ]
   },
   {
